ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
# Create SSL redirect
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  rules:
  - host: kibanacypeace.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
  - host: wazuhcypeace.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wazuh-manager
            port:
              number: 55000
